--- a/视频教程/淘口令/淘口令+随机表情字符.md
+++ b/视频教程/淘口令/淘口令+随机表情字符.md
@@ -1,6 +1,9 @@
 
+- 视频: https://www.bilibili.com/video/av51545489
+
 - 参考
     - 自定义淘口令前后辍 https://www.kancloud.cn/hujun528/a002/459758
 
 - 问题
     - 客服微信如果经常向用户回复【淘口令字符串】,会被微信官方封杀
+    - 微信封杀“淘口令“，淘宝商家何去何从 https://news.pedaily.cn/201805/431810.shtml
