所有能识别的符号

--- a/淘口令规则.md
+++ b/淘口令规则.md
@@ -3,6 +3,8 @@
 	- 30天
 	- 可以用 api检测是否有效
 - 能识别的格式
+    - 所有符号
+        - $￥¥€₳💰🔑🎵✔️💲🔐📲
 	- ￥VR4xboCzev9￥
 	- $KwaybL9lo8y$
 	- £0v0nbLdondC£
@@ -13,7 +15,7 @@
 	- ✔0v0nbLdondC✔
 	- 🔑KwaybL9lo8y🎵
 	- (oFn2bqKbHxv)
-	- ₳ipqVYRZzfta₳
+	- ₳Y5rMYReybZe₳
  
  
  
